# serverless_fastapi

./: README.md
.github/workflows/: api.yml
services/tasks_api/: main.py  models.py  pyproject.toml  serverless.yml  store.py  tests.py
services/tasks_api/.github/workflows/: api.yml
services/tasks_api/resources/: dynamodb.yml
