[tool.poetry]
name = "tasks-api"
version = "0.1.0"
description = ""
authors = ["memez-michalek <michal.lesniowski1@protonmail.com>"]
readme = "README.md"
packages = [{include = "tasks_api"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
bandit = "^1.7.5"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
